02 Aug 2018
fix: remember token getting deleted when flush cache
fix: AJAX Chat ban user
fix: string literals announce.php
fix: trivia showing icons
fix: schema for cheaters userip
update: jquery remove to fade out

01 Aug 2018
fix: typo lang_torrenttable_functions.php
fix: use correct key for userid news.php

31 Jul 2018
fix: typo bbcode_functions.php and anatomy.php
fix: typo takeedit.php
fix: return false if $image is empty bittorent.php

30 Jul 2018
fix: comments avatar details.php
fix: allow special chars for db password backupdb.php
move: breadcrumbs() to its own file
update: several cleanup scripts to fluentPDO
fix: incorrect lang variable name used modtask.php
fix: typo delete_torrents_update.php
update: return query ip ajax chat
update: delete user caches when set disabled
update: chat destroy session when user is disabled
add: missing require takeedit.php
update: check if var is empty before using it function_books.php
add: book update to images update cleanup
fix: ignore query upgrade_database.php
update: delete session for disabled users
add: button to ignore query on database update
update: allow staff site access when site set offline
remove: bad banner
fix: get lang before use of lang
fix: install set correct announce https url
fix: left join when no topic forum_posts.php

29 Jul 2018
add: default banner.jpp
add: dbconn() to all cleanup scripts
remove: time_adjust and time_offest from site_config
update: inner join on torrents comments.php
fix: when empty array comments.php 
update: site_config
update: assumed fk inactive_update.php
update: drop fk contstaint on dbbackup
update: drop fk constraint on bans
fix: customsmilie_update.php
update: drop fk constraint on bannedemails
update: site_config
fix: redis flush cache flushing all databases instead of just redis site db
update: site_config
fix: torrents_update.php
update: database files

28 Jul 2018
fix: card table background
fix: nfo display viewnfo.php