@@ -1,30 +1,18 @@
 <?php
 
-//==09 Birthday mod
 $age = $birthday = '';
-if ('0' != $user['birthday']) {
-    $current = date('Y-m-d', TIME_NOW);
-    list($year2, $month2, $day2) = explode('-', $current);
-    $birthday = $user['birthday'];
-    $birthday = date('Y-m-d', strtotime($birthday));
-    list($year1, $month1, $day1) = explode('-', $birthday);
-    if ($month2 < $month1) {
-        $age = $year2 - $year1 - 1;
-    }
-    if ($month2 == $month1) {
-        if ($day2 < $day1) {
-            $age = $year2 - $year1 - 1;
-        } else {
-            $age = $year2 - $year1;
-        }
-    }
-    if ($month2 > $month1) {
-        $age = $year2 - $year1;
-    }
-    $HTMLOUT .= "<tr><td class='rowhead'>{$lang['userdetails_age']}</td><td>" . htmlsafechars($age) . "</td></tr>\n";
-    $birthday = date('Y-m-d', strtotime($birthday));
-    $HTMLOUT .= "<tr><td class='rowhead'>{$lang['userdetails_birthday']}</td><td>" . htmlsafechars($birthday) . "</td></tr>\n";
+if ($user['birthday'] != '1970-01-01') {
+    $d1 = new DateTime(date('Y-m-d', TIME_NOW));
+    $d2 = new DateTime($user['birthday']);
+    $diff = $d2->diff($d1);
+
+    $HTMLOUT .= "
+        <tr>
+            <td class='rowhead'>{$lang['userdetails_age']}</td>
+            <td>" . htmlsafechars($diff->y) . "</td>
+        </tr>
+        <tr>
+            <td class='rowhead'>{$lang['userdetails_birthday']}</td>
+            <td>" . htmlsafechars($user['birthday']) . "</td>
+        </tr>";
 }
-//==End
-// End Class
-// End File
