@@ -1,4 +1,5 @@
 02 Aug 2018
+fix: invalid date birthday.php
 fix: remember token getting deleted when flush cache
 fix: AJAX Chat ban user
 fix: string literals announce.php
